--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -76,6 +76,7 @@ GOV.UK Prototype Kit
 
         <h2 class="govuk-heading-m">(USER) Specifc access approved</h2>
         <h3 class="govuk-heading-s"> Scenario C - Part 2 - Granted (approved)</h3>
+        <p><a target="_blank" href="/caseaccess/pages/email-approved-s?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=judiciary&">My access</a><br>Specifc access - Flow request</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
 
@@ -186,6 +187,7 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(USER) Specifc access approved</h2>
           <h3 class="govuk-heading-s"> Scenario C - Part 2 - Granted (approved)</h3>
+            <p><a target="_blank" href="/caseaccess/pages/email-approved-st?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">My access</a><br>Specifc access - Flow request</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
 
@@ -217,8 +219,9 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
           <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p>
+      <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p> -->
+          <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request</a><br>Specifc access - Flow rejected</p>
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
         <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
 -->
