--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -16,6 +16,11 @@ Case details
               <h2 class="govuk-heading-m">What happens next</h2>
 
               <p class="govuk-body">
+                The requester will be sent an email informing them they now have access.
+              </p>
+
+
+              <p class="govuk-body">
                 You can find the details in the ‘Roles and access’ tab.
               </p>
               <div class="govuk-button-group">
