--- a/app/views/caseaccess/pages/email-approved-st.html
+++ b/app/views/caseaccess/pages/email-approved-st.html
@@ -11,7 +11,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=judiciary&">
+      <a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">
 <img src="/public/images/sar-a.png" alt="Mock email"></a>
 
     </div>
