--- a/app/views/caseaccess/pages/myaccess-tc.html
+++ b/app/views/caseaccess/pages/myaccess-tc.html
@@ -62,10 +62,10 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc"><strong>Amelia Chu</strong></a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14/04/2021</strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("subtract", 4, "day") | date( "D MMMM YYYY" ) }}</strong></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 0, "day") | date( "D MMMM YYYY" ) }}</strong></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 30, "day") | date( "D MMMM YYYY" ) }} </strong></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("add", 7, "day") | date( "D MMMM YYYY" ) }} </strong></td>
                     <td class="govuk-table__cell"></td>
               </tbody>
           </table>
