--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (27/05/21)
+      Last updated (03/06/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -149,7 +149,7 @@ GOV.UK Prototype Kit
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=judiciary&">Roles and access - Add an exclusion - Who</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-2?usertype=judiciary&">Roles and access - Add an exclusion - Role</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-3?usertype=judiciary&">Roles and access - Add an exclusion - Find person</a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=judiciary&">Roles and access - Add an exclusion - Add type</a><br>Checked with DS - v3.3</p>
+<!-- <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=judiciary&">Roles and access - Add an exclusion - Add type</a><br>Checked with DS - v3.3</p> -->
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-5?usertype=judiciary&">Roles and access - Add an exclusion - Describe exclusion</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-6?usertype=judiciary&">Roles and access - Add an exclusion - Check details</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=judiciary&">Roles and access - Add an exclusion - Complete</a><br>Checked with DS - v3.3</p>
@@ -409,7 +409,7 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi?usertype=staff&">Roles and access - Add an exclusion - Who</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-2?usertype=staff&">Roles and access - Add an exclusion - Role</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-3?usertype=staff&">Roles and access - Add an exclusion - Find person</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=staff&">Roles and access - Add an exclusion - Add type</a><br>Checked with DS - v3.3</p>
+  <!--  <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-4?usertype=staff&">Roles and access - Add an exclusion - Add type</a><br>Checked with DS - v3.3</p> -->
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-5?usertype=staff&">Roles and access - Add an exclusion - Describe exclusion</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-6?usertype=staff&">Roles and access - Add an exclusion - Check details</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=staff&">Roles and access - Add an exclusion - Complete</a><br>Checked with DS - v3.3</p>
