--- a/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
@@ -78,7 +78,7 @@ Case details
 
       {
         value: "phone",
-        text: "Indefinite",
+        text: "As long as the case is open",
         hint: {
       text: "Access starts from today and lasts while the case is open."
     }
