--- a/app/views/caseaccess/pages/email-approved.html
+++ b/app/views/caseaccess/pages/email-approved.html
@@ -12,7 +12,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a href="#">
-<img src="/public/images/specific-access-approved.png" alt="Mock email"></a>
+<img src="/public/images/sar-a.png" alt="Mock email"></a>
 
     </div>
   </div>
