--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -16,7 +16,7 @@ Case details
               <h2 class="govuk-heading-m">What happens next</h2>
 
               <p class="govuk-body">
-                The requester will be sent an email informing them they now have access.
+                The person making the request will be sent an email notifying them that they now have access to the case.
               </p>
 
 
