--- a/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-case.html
@@ -29,7 +29,7 @@ Case details
     }
   },
   hint: {
-    text: "Select one reason. This reason will be sent to the person requesting access to the case."
+    text: "Select an option. This information will be sent to the person requesting access to the case."
   },
   items: [
   {
