--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -18,6 +18,7 @@ Refunds
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Trigger</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Status</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
         </tr>
       </thead>
@@ -29,6 +30,7 @@ Refunds
           text: now | date( 'subtract', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
+          <td class="govuk-table__cell">New</a>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn">Review case</a></td>
         </tr>
 
@@ -40,6 +42,7 @@ Refunds
           text: now | date( 'subtract', 5, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}}</td>
+          <td class="govuk-table__cell">Awaiting response</a>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn">Review case</a></td>
         </tr>
         
