--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -58,7 +58,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request
+              Reject request and request more information
             </label>
           </div>
         </div>
