--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -110,8 +110,10 @@ GOV.UK Prototype Kit
         <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
       <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=judiciary&">My access</a><br>Specifc access - Flow rejected</p>
         <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected</p>
-       --><p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request</a><br>Specifc access - Flow rejected</p>
+       -->
 
+       <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
+<p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=judiciary&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p>
 
         <!-- SECTION BREAK -->
 
@@ -221,7 +223,8 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
       <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p> -->
-          <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request</a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=staff&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=staff&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p>
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
         <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
 -->
