--- a/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr-case.html
@@ -56,9 +56,15 @@ Case details
             </label>
           </div>
           <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trrc-case">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+              Reject request
+            </label>
+          </div>
+          <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request and request more information
+              Request more information
             </label>
           </div>
         </div>
