--- a/app/views/caseaccess/pages/PA-00467-2017-tr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tr.html
@@ -56,9 +56,15 @@ To view details of the other case linked to the parties/family on my current cas
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trrc">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
               Reject request
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/PA-00467-2017-trr">
+            <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+              Request more information
             </label>
           </div>
         </div>
