--- a/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra-case.html
@@ -13,6 +13,7 @@ Case details
 {% block content %}
 <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
+          <span class="govuk-caption-l">Approve specific access request</span>
     {% set setDuration %}
     {{ govukDateInput({
       id: "passport-issued",
