--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -10,7 +10,7 @@ GOV.UK Prototype Kit
     </h1>
     <h2 class="govuk-heading-l">
       Last updated (04/06/21)
-    </h2>c
+    </h2>
     <div style="display: flex; margin-top: 80px;">
 
 
@@ -58,8 +58,8 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=judiciary&">My tasks - Unassign</a><br>Checked with DS - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/lms?usertype=judiciary&">Unassign task - Unassign</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=judiciary&">Unassigned task - Unassign</a><br>Checked with DS - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
 
         <!-- SECTION BREAK -->
@@ -315,8 +315,8 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=staff&">My tasks - Unassign</a><br>Checked with DS - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/lms?usertype=staff&">Unassign task - Unassign</a><br> - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=staff&">Unassigned task - Unassign</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/reassign?usertype=staff&">Reassign task - Find the judge</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=staff&">Reassign task - Check your changes</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign?usertype=staff&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=staff&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
     <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=staff&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
 
     <!-- SECTION BREAK -->
