--- a/app/views/workallocation/pages/reassign-b.html
+++ b/app/views/workallocation/pages/reassign-b.html
@@ -7,20 +7,16 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-page-heading">
-  <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Reassign task</h1>
-  </div>
-</div>
-<div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Check your changes
-    </label>
-  </h2>
-  <div id="event-name-hint" class="govuk-hint">
-    Check you are reassigning work to the right person.
-  </div>
 
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Reassign task</span>
+  Check your changes
+</h1>
+
+    <div id="waste-hint" class="govuk-hint">
+      Check you are reassigning work to the right person.
+    </div>
 
 
     <div class="hmcts-scrollable-pane">
