--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -20,9 +20,9 @@ Case details
               </p>
 
 
-              <p class="govuk-body">
+        <!--      <p class="govuk-body">
                 You can find the details in the ‘Roles and access’ tab.
-              </p>
+              </p> -->
               <div class="govuk-button-group">
               {{ govukButton({
                 text: "Return to My tasks",
