--- a/app/views/caseaccess/pages/PA-00467-2017-trr.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr.html
@@ -18,6 +18,18 @@ Case details
 {% endset -%}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+
+    <div class="govuk-form-group">
+      <h1 class="govuk-label-wrapper">  <span class="govuk-caption-l">Reject specific access request</span><label class="govuk-label govuk-label--l" for="more-detail">
+            Request more information
+        </label>
+      </h1>
+      <div id="more-detail-hint" class="govuk-hint">
+        This information will be sent to the person requesting access to the case.
+      </div>
+      <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
+    </div>
+    <!--
     {{ govukRadios({
       idPrefix: "contact",
       name: "contact",
@@ -45,7 +57,7 @@ Case details
           }
         }
       ]
-    }) }}
+    }) }} -->
 <div class="govuk-button-group">
 {{ govukButton({
   text: "Submit",
