--- a/app/views/workallocation/pages/reassign.html
+++ b/app/views/workallocation/pages/reassign.html
@@ -7,20 +7,20 @@
 My work
 {% endblock %}
 {% block content %}
-<div class="hmcts-page-heading">
-  <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Reassign task</h1>
-  </div>
-</div>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Reassign task</span>
+  Find the person
+</h1>
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
-  <div id="event-name-hint" class="govuk-hint">
-    Type the name of the person and select them.
-  </div>
+  <fieldset class="govuk-fieldset" aria-describedby="">
+    <div id="waste-hint" class="govuk-hint">
+      Type the name of the person and select them.
+    </div>
+
+
   <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+    </fieldset>
 </div>
 
 
