--- a/app/views/workallocation/pages/wa-PA-00467-2017-hj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-hj.html
@@ -9,15 +9,18 @@ Case details
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
+
+<span class="govuk-caption-l">Allocate a hearing judge</span>
+<div class="govuk-form-group">
+  <h1 class="govuk-label-wrapper"><legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      Choose who to allocate the role to
+    </legend>
+  </h1>
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose who to allocate the role to
-          </h3>
-        </legend>
+
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
