--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (04/06/21)
+      Last updated (11/06/21)
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -70,10 +70,10 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=judiciary&">Available tasks - Go to tasks</a><br>Checked with DS - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-all?usertype=judiciary&">Active tasks</a><br>- v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=judiciary&">Roles and access - Allocate a hearing judge</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=judiciary&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=judiciary&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.3 </p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=judiciary&">Roles and access - Allocate a hearing judge</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=judiciary&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=judiciary&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.3 - updated H1s</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjc?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - confirmation</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-none?usertype=judiciary&">Roles and access - no active tasks for case</a> - v3.3</p>
 <br>
@@ -81,12 +81,12 @@ GOV.UK Prototype Kit
 <div class="govuk-!-padding-bottom-6"></div>
 
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-noj?usertype=judiciary&">Roles and access - Allocate role</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajn?usertype=judiciary&">Roles and access - Allocate a judicial role</a><br> - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajn?usertype=judiciary&">Roles and access - Allocate a judicial role</a><br> - v3.3 - updated H1s</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-aj-err-s?usertype=judiciary&">Roles and access - Allocate role - generic error</a><br>NEW - additional generic error page when no selction has been made</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=judiciary&">Roles and access - Allocate a judicial role - choose</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 </p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=judiciary&">Roles and access - Allocate a judicial role - choose</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.3 - updated H1s </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.3</p>
 
 
@@ -327,10 +327,10 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Available tasks - tab</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-o?usertype=staff&">Available tasks - Go to tasks</a><br>Checked with DS - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-all?usertype=staff&">Active tasks</a><br>- v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=staff&">Roles and access - Allocate a hearing judge</a><br> - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=staff&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=staff&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.3 </p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=staff&">Roles and access - Allocate a hearing judge</a><br> - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=staff&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=staff&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.3 - updated H1s</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjc?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-none?usertype=staff&">Roles and access - no active tasks for case</a> - v3.3</p>
     <br>
