--- a/app/views/workallocation/pages/wa-PA-00467-2017-aj-err.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-aj-err.html
@@ -18,15 +18,18 @@ Case details
     }
   ]
 }) }}
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+
+<div class="govuk-form-group govuk-form-group--error">
+<h1 class="govuk-heading-l ">
+  <span class="govuk-caption-l ">Allocate a judicial role</span>
+    Choose a role
+</h1>
+
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-    <div class="govuk-form-group govuk-form-group--error">
+
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose a role
-          </h3>
-        </legend>
+
         <span id="changed-name-error" class="govuk-error-message">
       <span class="govuk-visually-hidden">Error:</span> This role already exists. Select a different role or cancel
     </span>
