--- a/app/views/workallocation/pages/wa-PA-00467-2017-hjchk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-hjchk.html
@@ -11,8 +11,12 @@ Case details
 <a href="wa-PA-00467-2017-hjdur" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
-<h2 class="govuk-heading-m">Check your answers</h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+    Check your answers
+</h1>
+
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
