--- a/app/views/workallocation/pages/wa-PA-00467-2017-hjha.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-hjha.html
@@ -11,19 +11,21 @@ Case details
 <a href="wa-PA-00467-2017-hj" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<!--<span class="govuk-caption-l">Hearing judge</span> -->
-<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
 
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+  Find the person
+</h1>
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
-  <div id="event-name-hint" class="govuk-hint">
-    Type the name of the person and select them.
+  <fieldset class="govuk-fieldset" aria-describedby="">
+    <div id="waste-hint" class="govuk-hint">
+      Type the name of the person and select them.
+    </div>
+
+    <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+      </fieldset>
   </div>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
-</div>
 
   <div class="govuk-button-group">
   {{ govukButton({
