--- a/app/views/workallocation/pages/wa-PA-00467-2017-aj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-aj.html
@@ -9,15 +9,15 @@ Case details
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a judicial role</span>
+    Choose a role
+</h1>
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose a role
-          </h3>
-        </legend>
+
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
