--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhadur-fpj-err-2.html
@@ -24,14 +24,12 @@ Case details
     </ul>
   </div>
 </div>
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
-
 <div class="govuk-form-group govuk-form-group--error">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Duration of role
-    </label>
-  </h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+    Duration of role
+</h1>
 
   {% set setDuration %}
 
