--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-3-error2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-3-error2.html
@@ -24,13 +24,14 @@ Case details
     </ul>
   </div>
 </div>
-<h2 class="govuk-heading-l">Add an exclusion</h2>
+
 
 <div class="govuk-form-group govuk-form-group--error">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
+  <h1 class="govuk-heading-l">
+    <span class="govuk-caption-l">Add an exclusion</span>
       Find the person
-    </label>
-  </h2>
+  </h1>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
