--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-5.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-5.html
@@ -11,10 +11,13 @@ Case details
 <a href="wa-PA-00467-2017-coi-3" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-
-<h2 class="govuk-heading-l">Add an exclusion</h2>
-<h2 class="govuk-heading-m">Describe the exclusion</h2>
 <div class="govuk-form-group">
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Add an exclusion</span>
+    Describe the exclusion
+</h1>
+
+
 
 
   <textarea class="govuk-textarea govuk-!-width-one-half" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
