--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-6.html
@@ -11,8 +11,11 @@ Case details
 <a href="wa-PA-00467-2017-coi-5" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Add an exclusion</h2>
-<h2 class="govuk-heading-m">Check your exclusion</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Add an exclusion</span>
+    Check your exclusion
+</h1>
+
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
