--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi.html
@@ -9,14 +9,14 @@ Case details
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-l">Add an exclusion</h2>
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading"><span class="govuk-caption-l ">Add an exclusion</span>
             Choose who the exclusion is for
-          </h3>
+          </h1>
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
