--- a/app/views/workallocation/pages/wa-PA-00467-2017-real-chk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-real-chk.html
@@ -9,14 +9,15 @@ Case details
 {% endblock %}
 
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Reallocate role</h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Reallocate a hearing judge </span>
+    Check your changes
+</h1>
+
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Check your changes
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     This will reallocate the role to the person below. You may need reassign associated tasks too.
   </div>
