--- a/app/views/workallocation/pages/wa-cases-real.html
+++ b/app/views/workallocation/pages/wa-cases-real.html
@@ -9,14 +9,14 @@ Case details
 {% endblock %}
 
 {% block content %}
-<span class="govuk-caption-l">Lead Judge</span>
-<h2 class="govuk-heading-l">Reallocate role</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Reallocate Lead Judge</span>
+    Find the person
+</h1>
+
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the  person and select them.
   </div>
