--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajdur.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajdur.html
@@ -12,13 +12,14 @@ Case details
 {% endblock %}
 {% block content %}
 <!--<span class="govuk-caption-l">Hearing judge</span> -->
-<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+  Duration of role
+</h1>
+
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Duration of role
-    </label>
-  </h2>
+
   {% set setDuration %}
   {{ govukDateInput({
     id: "passport-issued",
