--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
@@ -12,15 +12,16 @@ Case details
 {% endblock %}
 {% block content %}
 <!-- <span class="govuk-caption-l">Hearing judge</span> -->
-<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+    Choose how to allocate the judicial role
+</h1>
+
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose how to allocate the judicial role
-          </h3>
-        </legend>
+
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
