--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpjl.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajha-fpjl.html
@@ -11,18 +11,18 @@ Case details
 <a href="wa-PA-00467-2017-aj-fpjl" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+  Choose who to allocate the role to
+
+</h1>
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
-  <input class="govuk-input govuk-!-width-one-half" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="Judge Goodwin (judge.goodwin@example.com)">
+  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint" value="Judge Goodwin (judge.goodwin@example.com)">
 </div>
 <!--
 <div class="govuk-inset-text govuk-!-width-three-quarters">
@@ -38,6 +38,6 @@ Case details
 
   <p><a class="govuk-body" href="wa-PA-00467-2017-ar-fpjl">Cancel</a></p>
 </div>
-</form>
+
 
 {% endblock %}
