--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajhan.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajhan.html
@@ -22,7 +22,7 @@ Case details
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+  <input class="govuk-input govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
 
   <div class="govuk-button-group">
