--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajndurlo.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajndurlo.html
@@ -11,14 +11,12 @@ Case details
 <a href="wa-PA-00467-2017-ajhanlo" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
-
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a hearing judge</span>
+    Duration of role
+</h1>
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Duration of role
-    </label>
-  </h2>
+
   {% set setDuration %}
   {{ govukDateInput({
     id: "passport-issued",
