--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-chkj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-chkj.html
@@ -11,8 +11,13 @@ Case details
 <a href="wa-PA-00467-2017-alor-durj" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a legal ops role</h2>
-<h2 class="govuk-heading-m">Check your allocation</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a case manager</span>
+          Check your allocation
+</h1>
+
+
+
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
