--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-ftp.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-ftp.html
@@ -11,14 +11,14 @@ Case details
 <a href="wa-PA-00467-2017-alor-who" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Case manager</span>
-<h2 class="govuk-heading-l">Allocate a legal ops  role</h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a case manager</span>
+            Find the person
+</h1>
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
