--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-who.html
@@ -11,16 +11,17 @@ Case details
 <a href="wa-PA-00467-2017-alor" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Case manager</span>
-<h2 class="govuk-heading-l">Allocate a legal ops role</h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a case manager</span>
+          Choose how to allocate the role
+</h1>
+
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose how to allocate the role
-          </h3>
-        </legend>
+
         <div class="govuk-radios">
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="#">
