--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor.html
@@ -9,15 +9,16 @@ Case details
 {% endblock %}
 
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a legal ops role</h2>
+
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Allocate a legal ops role</span>
+    Choose a role
+</h1>
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
-            Choose a role
-          </h3>
-        </legend>
+
         <div class="govuk-radios">
 
           <div class="govuk-radios__item">
