--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
@@ -11,14 +11,15 @@ Case details
 <a href="wa-PA-00467-2017-coi" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Add an exclusion</h2>
+
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-          <h3 class="govuk-fieldset__heading">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading"><span class="govuk-caption-l ">Add an exclusion</span>
             Choose the person's role
-          </h3>
+          </h1>
+
         </legend>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
