--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-3.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-3.html
@@ -12,17 +12,17 @@ Case details
 {% endblock %}
 {% block content %}
 
-<h2 class="govuk-heading-l">Add an exclusion</h2>
+<h1 class="govuk-heading-l">
+  <span class="govuk-caption-l">Add an exclusion</span>
+    Find the person
+</h1>
 
 <div class="govuk-form-group">
-  <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
-      Find the person
-    </label>
-  </h2>
+
   <div id="event-name-hint" class="govuk-hint">
     Type the name of the person and select them.
   </div>
-  <input class="govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
+  <input class="govuk-input govuk-input govuk-!-width-one-third" id="event-name" name="event-name" type="text" aria-describedby="event-name-hint">
 </div>
 
   <div class="govuk-button-group">
