--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-5-error.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-5-error.html
@@ -25,11 +25,12 @@ Case details
 </div>
 
 <div class="govuk-form-group govuk-form-group--error">
-  <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="more-detail">
-      Add an exclusion
-    </label>
+  <h1 class="govuk-heading-l">
+    <span class="govuk-caption-l">Add an exclusion</span>
+      Describe the exclusion
   </h1>
-  <h2 class="govuk-heading-m">Describe the exclusion</h2>
+
+
   <span id="more-detail-error" class="govuk-error-message">
     <span class="govuk-visually-hidden">Error:</span> Enter exclusion
   </span>
