--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -31,7 +31,7 @@ Refunds
         })}} </td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">
             <a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn">Review case</a> &nbsp;
-            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?state=remission">Process refund</a>
+            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?state=withdrawn">Process refund</a>
           </td>
         </tr>
 
