--- a/app/views/workallocation/layoutpros.html
+++ b/app/views/workallocation/layoutpros.html
@@ -102,6 +102,11 @@
                 active: pageId == '#'
                 },
                 {
+                text: 'Refund list',
+                href: getUrl('/pages/wa-mytasks-refunds'),
+                active: pageId == '#'
+                },
+                {
                 text: 'Create case',
                 href: getUrl('/solicitor/caselist'),
                 active: pageId == '#'
